--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,19 +25,20 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header nav {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+
 }
 
-header nav ul {
+nav a {
     list-style-type: none;
 }
 
-header nav ul li {
+header nav a {
     display: inline-block;
     margin-left: 25px;
 }
@@ -51,7 +52,7 @@ p {
     font-size: 16px;
 }
 
-.hero {
+artticle hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -76,7 +77,7 @@ p {
     margin-left: 20px;
 }
 
-#benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
