--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,15 @@
+/*syling for everything on the page */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/*add background color to body*/
 body {
     background-color: #d9dcd6;
     background-repeat: no-repeat;
 }
-
+/*header styling and removed divs*/
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -25,6 +26,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
+/*change from header li to nav and added styling under nav*/
 nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -33,7 +35,7 @@ nav {
     font-size: 20px;
 
 }
-
+/*nav links styling*/
 nav a {
     list-style-type: none;
 }
@@ -47,11 +49,11 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/*paragraphs font size*/
 p {
     font-size: 16px;
 }
-
+/*keeps background image at the top portion of page without img tag*/
 .hero {
     height: 800px;
     width: 100%;
@@ -76,7 +78,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/*changed to aside element from benefits id*/
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -88,7 +90,7 @@ aside {
     background-color: #2589bd;
 }
 
-/*/ benefit class styling */
+/* benefit class styling */
 
 .benefit {
     margin-bottom: 32px;
@@ -106,7 +108,7 @@ aside {
     max-width: 150px;
 }
 
-/*sercvices class styling */
+/*added services class styling */
 
 .services {
     margin-bottom: 20px;
@@ -125,7 +127,7 @@ aside {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/*footer styling*/
 footer {
     padding: 30px;
     clear: both;
